Add social links:

--- a/source/line-up.html.erb
+++ b/source/line-up.html.erb
@@ -37,64 +37,213 @@ description: Op de line-up staan onder andere Magnetic Spacemen, Jopen, Meadowla
 
       <div class="line-up-item" data-cat="band">
         <%= image_tag("line-up/magnetic-spacemen.png") %>
+        <ul>
+          <li>
+            <a href="https://www.facebook.com/MAGNETIC-SPACEMEN-247251198783973/" class="icon-facebook" target="_blank"></a>
+          </li>
+          <li>
+            <a href="http://www.magneticspacemen.nl/" class="icon-link" target="_blank"></a>
+          </li>
+        </ul>
       </div>
       <div class="line-up-item" data-cat="beer">
         <%= image_tag("line-up/het-uiltje.png") %>
+        <ul>
+          <li>
+            <a href="https://www.facebook.com/hetuiltje/" class="icon-facebook" target="_blank"></a>
+          </li>
+          <li>
+            <a href="https://www.uiltjecraftbeer.com/" class="icon-link" target="_blank"></a>
+          </li>
+        </ul>
       </div>
       <div class="line-up-item" data-cat="band">
         <%= image_tag("line-up/the-lay.png") %>
+        <ul>
+          <li>
+            <a href="https://www.facebook.com/music.thelay/" class="icon-facebook" target="_blank"></a>
+          </li>
+          <li>
+            <a href="http://thelay.nl/" class="icon-link" target="_blank"></a>
+          </li>
+        </ul>
       </div>
       <div class="line-up-item" data-cat="beer">
         <%= image_tag("line-up/de-moersleutel.png") %>
+        <ul>
+          <li>
+            <a href="https://www.facebook.com/moersleutel/" class="icon-facebook" target="_blank"></a>
+          </li>
+          <li>
+            <a href="http://brouwerijdemoersleutel.nl/" class="icon-link" target="_blank"></a>
+          </li>
+        </ul>
       </div>
 
       <div class="line-up-item" data-cat="beer">
         <%= image_tag("line-up/jopen.png") %>
+        <ul>
+          <li>
+            <a href="https://www.facebook.com/JopenBier/" class="icon-facebook" target="_blank"></a>
+          </li>
+          <li>
+            <a href="https://www.jopenbier.nl/" class="icon-link" target="_blank"></a>
+          </li>
+        </ul>
       </div>
       <div class="line-up-item" data-cat="band">
         <%= image_tag("line-up/model-depose.png") %>
+        <ul>
+          <li>
+            <a href="https://www.facebook.com/modeldepose" class="icon-facebook" target="_blank"></a>
+          </li>
+          <li>
+            <a href="http://www.modeldepose.com/" class="icon-link" target="_blank"></a>
+          </li>
+        </ul>
       </div>
       <div class="line-up-item" data-cat="beer">
         <%= image_tag("line-up/frontaal.png") %>
+        <ul>
+          <li>
+            <a href="https://www.facebook.com/BrouwerijFrontaal/" class="icon-facebook" target="_blank"></a>
+          </li>
+          <li>
+            <a href="http://www.brouwerijfrontaal.nl/" class="icon-link" target="_blank"></a>
+          </li>
+        </ul>
       </div>
       <div class="line-up-item" data-cat="band">
         <%= image_tag("line-up/rum-and-skunk.png") %>
+        <ul>
+          <li>
+            <a href="https://www.facebook.com/rumenskunk" class="icon-facebook" target="_blank"></a>
+          </li>
+          <li>
+            <a href="http://www.rumenskunk.nl/" class="icon-link" target="_blank"></a>
+          </li>
+        </ul>
       </div>
 
       <div class="line-up-item" data-cat="band">
         <%= image_tag("line-up/rammerick.png") %>
+        <ul>
+          <li>
+            <a href="https://www.facebook.com/merrickband/" class="icon-facebook" target="_blank"></a>
+          </li>
+          <li>
+            <a href="http://vorro.nl/merrick/" class="icon-link" target="_blank"></a>
+          </li>
+        </ul>
       </div>
       <div class="line-up-item" data-cat="beer">
         <%= image_tag("line-up/oproer.png") %>
+        <ul>
+          <li>
+            <a href="https://www.facebook.com/oproerbrouwerij/" class="icon-facebook" target="_blank"></a>
+          </li>
+          <li>
+            <a href="http://www.oproerbrouwerij.nl/" class="icon-link" target="_blank"></a>
+          </li>
+        </ul>
       </div>
       <div class="line-up-item" data-cat="band">
         <%= image_tag("line-up/ginger-likes.png") %>
+        <ul>
+          <li>
+            <a href="https://www.facebook.com/gingerlikes.sleazerock/" class="icon-facebook" target="_blank"></a>
+          </li>
+        </ul>
       </div>
       <div class="line-up-item" data-cat="beer">
         <%= image_tag("line-up/de-kromme-haring.png") %>
+        <ul>
+          <li>
+            <a href="https://www.facebook.com/dekromme.haring/" class="icon-facebook" target="_blank"></a>
+          </li>
+          <li>
+            <a href="http://www.dekrommeharing.nl/" class="icon-link" target="_blank"></a>
+          </li>
+        </ul>
       </div>
 
       <div class="line-up-item" data-cat="beer">
         <%= image_tag("line-up/rockin-ludina.png") %>
+        <ul>
+          <li>
+            <a href="https://www.facebook.com/RockinLudinaBrewery/" class="icon-facebook" target="_blank"></a>
+          </li>
+          <li>
+            <a href="http://www.rockinludinabrewery.com/" class="icon-link" target="_blank"></a>
+          </li>
+        </ul>
       </div>
       <div class="line-up-item" data-cat="band">
         <%= image_tag("line-up/meadowlake.png") %>
+        <ul>
+          <li>
+            <a href="https://www.facebook.com/meadowlakeband/" class="icon-facebook" target="_blank"></a>
+          </li>
+          <li>
+            <a href="http://meadowlake.bandcamp.com/" class="icon-link" target="_blank"></a>
+          </li>
+        </ul>
       </div>
       <div class="line-up-item" data-cat="beer">
         <%= image_tag("line-up/martinus.png") %>
+        <ul>
+          <li>
+            <a href="https://www.facebook.com/Brouwerijmartinus/" class="icon-facebook" target="_blank"></a>
+          </li>
+          <li>
+            <a href="http://www.brouwerijmartinus.nl/" class="icon-link" target="_blank"></a>
+          </li>
+        </ul>
       </div>
       <div class="line-up-item" data-cat="beer">
         <%= image_tag("line-up/bax.png") %>
+        <ul>
+          <li>
+            <a href="https://www.facebook.com/baxbier/" class="icon-facebook" target="_blank"></a>
+          </li>
+          <li>
+            <a href="http://www.baxbier.com/" class="icon-link" target="_blank"></a>
+          </li>
+        </ul>
       </div>
 
       <div class="line-up-item" data-cat="beer">
         <%= image_tag("line-up/pivo.png") %>
+        <ul>
+          <li>
+            <a href="https://www.facebook.com/pivobrouwers/" class="icon-facebook" target="_blank"></a>
+          </li>
+          <li>
+            <a href="http://www.pivo.nl/" class="icon-link" target="_blank"></a>
+          </li>
+        </ul>
       </div>
       <div class="line-up-item" data-cat="beer">
         <%= image_tag("line-up/eggens.png") %>
+        <ul>
+          <li>
+            <a href="https://www.facebook.com/Eggens-262041450932462/" class="icon-facebook" target="_blank"></a>
+          </li>
+          <li>
+            <a href="http://eggensbier.com/" class="icon-link" target="_blank"></a>
+          </li>
+        </ul>
       </div>
       <div class="line-up-item" data-cat="beer">
         <%= image_tag("line-up/brouwerij-groninger.png") %>
+        <ul>
+          <li>
+            <a href="https://www.facebook.com/groningerbier" class="icon-facebook" target="_blank"></a>
+          </li>
+          <li>
+            <a href="http://groningerbier.nl/" class="icon-link" target="_blank"></a>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
