--- a/source/stylesheets/_line-up.scss
+++ b/source/stylesheets/_line-up.scss
@@ -41,7 +41,7 @@ body.line-up {
     .line-up-item {
       color: $base-font-color;
       display: inline-block;
-      margin-bottom: 2em;
+      margin-bottom: 2.4em;
       padding-left: 1em;
       padding-right: 1em;
       text-align: center;
@@ -49,6 +49,38 @@ body.line-up {
 
       @include media($medium-up) {
         width: calc(100% * (1/4) - 10px - 1px);
+      }
+
+      ul {
+        margin: 0 auto;
+        max-width: 200px;
+        padding: 0.5em 0;
+      }
+
+      li {
+        display: inline-block;
+        margin-left: 0.25em;
+        margin-right: 0.25em;
+      }
+
+      [class^="icon-"],
+      [class*=" icon-"] {
+        background: $medium-gray;
+        border-radius: 36px;
+        color: $white;
+        font-size: $base-font-size;
+        padding: 0.4em;
+
+        &.active,
+        &:active,
+        &:hover {
+          background-color: darken($medium-gray, 10);
+        }
+      }
+
+      img {
+        display: block;
+        margin: 0 auto 0.8em;
       }
     }
   }
