--- a/source/stylesheets/components/_share.scss
+++ b/source/stylesheets/components/_share.scss
@@ -4,8 +4,8 @@ section.social-share {
 
   h3 {
     display: block;
-    font-family: $navigation-font-family;
-    font-size: $base-font-size * 1.6;
+    font-family: $heading-font-family;
+    font-size: $base-font-size * 3;
   }
 
   ul {
@@ -14,7 +14,7 @@ section.social-share {
 
   li {
     display: inline-block;
-    font-size: $base-font-size * 1.2;
+    font-size: $base-font-size * 1.6;
     margin-left: 0.25em;
     margin-right: 0.25em;
 
