--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -63,4 +63,6 @@ description: Welkom bij het Hop! into the Grain Craft Beer & Music Festival powe
   </div>
 </section>
 
+<%= partial "playlist", locals: { height: "80" } %>
+
 <%= partial "maps" %>
