--- a/source/line-up.html.erb
+++ b/source/line-up.html.erb
@@ -249,4 +249,6 @@ description: Op de line-up staan onder andere Magnetic Spacemen, Jopen, Meadowla
   </div>
 </section>
 
+<%= partial "playlist", locals: { height: "360" } %>
+
 <%= partial "ticket" %>
