--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -48,7 +48,7 @@ description: Welkom bij het Hop! into the Grain Craft Beer & Music Festival powe
         <%= image_tag("line-up/het-uiltje.png") %>
       </div>
       <div class="line-up-block">
-        <%= image_tag("line-up/de-moersleutel.png") %>
+        <%= image_tag("line-up/rockin-ludina.png") %>
       </div>
       <div class="line-up-block">
         <%= image_tag("line-up/jopen.png") %>
