--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,6 +1,6 @@
 ---
-title: Hop! into the Grain | Craft Beer & Music Festival | 26 mei 2018 - Groningen
-description: Welkom bij het Hop! into the Grain Craft Beer & Music Festival powered by Just in Beer. Check de line-up, informatie en koop direct tickets!
+title: Welkom bij het Hop! into the Grain Craft Beer & Music Festival
+description: "Het nieuwste bierfestival van Groningen: Hop! into the Grain Craft Beer & Music Festival."
 ---
 
 <section class="hero">
@@ -45,16 +45,16 @@ description: Welkom bij het Hop! into the Grain Craft Beer & Music Festival powe
 
     <div class="line-up-wrapper">
       <div class="line-up-block">
-        <%= image_tag("line-up/het-uiltje.png") %>
+        <%= image_tag "line-up/het-uiltje.png", alt: "Brouwerij Het Uiltje", title: "Brouwerij Het Uiltje" %>
       </div>
       <div class="line-up-block">
-        <%= image_tag("line-up/rockin-ludina.png") %>
+        <%= image_tag "line-up/rockin-ludina.png", alt: "Brouwerij Rockin' Ludina", title: "Brouwerij Rockin' Ludina" %>
       </div>
       <div class="line-up-block">
-        <%= image_tag("line-up/jopen.png") %>
+        <%= image_tag "line-up/jopen.png", alt: "Brouwerij Jopen", title: "Brouwerij Jopen" %>
       </div>
       <div class="line-up-block">
-        <%= image_tag("line-up/frontaal.png") %>
+        <%= image_tag "line-up/frontaal.png", alt: "Brouwerij Frontaal", title: "Brouwerij Frontaal" %>
       </div>
     </div>
 
