--- a/source/line-up.html.erb
+++ b/source/line-up.html.erb
@@ -1,6 +1,6 @@
 ---
 title: Line-up
-description: Op de line-up staan onder andere Magnetic Spacemen, Jopen, Meadowlake en De Moersleutel. Bekijk de rest van de line-up.
+description: Op dit Groningse bier- en muziekfestival geven onder andere Magnetic Spacemen, Brouwerij Jopen, Meadowlake, Brouwerij Het Uiltje en Brouwerij Rockin' Ludina acte de presence.
 ---
 
 <section class="hero">
@@ -36,7 +36,7 @@ description: Op de line-up staan onder andere Magnetic Spacemen, Jopen, Meadowla
     <div class="line-up-wrapper" id="line-up-content">
 
       <div class="line-up-item" data-cat="band">
-        <%= image_tag("line-up/magnetic-spacemen.png") %>
+        <%= image_tag "line-up/magnetic-spacemen.png", alt: "Magnetic Spacemen", title: "Magnetic Spacemen" %>
         <ul>
           <li>
             <a href="https://www.facebook.com/MAGNETIC-SPACEMEN-247251198783973/" class="icon-facebook" target="_blank"></a>
@@ -47,7 +47,7 @@ description: Op de line-up staan onder andere Magnetic Spacemen, Jopen, Meadowla
         </ul>
       </div>
       <div class="line-up-item" data-cat="beer">
-        <%= image_tag("line-up/het-uiltje.png") %>
+        <%= image_tag "line-up/het-uiltje.png", alt: "Brouwerij Het Uiltje", title: "Brouwerij Het Uiltje" %>
         <ul>
           <li>
             <a href="https://www.facebook.com/hetuiltje/" class="icon-facebook" target="_blank"></a>
@@ -58,7 +58,7 @@ description: Op de line-up staan onder andere Magnetic Spacemen, Jopen, Meadowla
         </ul>
       </div>
       <div class="line-up-item" data-cat="band">
-        <%= image_tag("line-up/the-lay.png") %>
+        <%= image_tag "line-up/the-lay.png", alt: "The Lay", title: "The Lay" %>
         <ul>
           <li>
             <a href="https://www.facebook.com/music.thelay/" class="icon-facebook" target="_blank"></a>
@@ -69,7 +69,7 @@ description: Op de line-up staan onder andere Magnetic Spacemen, Jopen, Meadowla
         </ul>
       </div>
       <div class="line-up-item" data-cat="beer">
-        <%= image_tag("line-up/jopen.png") %>
+        <%= image_tag "line-up/jopen.png", alt: "Brouwerij Jopen", title: "Brouwerij Jopen" %>
         <ul>
           <li>
             <a href="https://www.facebook.com/JopenBier/" class="icon-facebook" target="_blank"></a>
@@ -81,7 +81,7 @@ description: Op de line-up staan onder andere Magnetic Spacemen, Jopen, Meadowla
       </div>
 
       <div class="line-up-item" data-cat="band">
-        <%= image_tag("line-up/model-depose.png") %>
+        <%= image_tag "line-up/model-depose.png", alt: "Model Depose", title: "Model Depose" %>
         <ul>
           <li>
             <a href="https://www.facebook.com/modeldepose" class="icon-facebook" target="_blank"></a>
@@ -92,7 +92,7 @@ description: Op de line-up staan onder andere Magnetic Spacemen, Jopen, Meadowla
         </ul>
       </div>
       <div class="line-up-item" data-cat="beer">
-        <%= image_tag("line-up/frontaal.png") %>
+        <%= image_tag "line-up/frontaal.png", alt: "Brouwerij Frontaal", title: "Brouwerij Frontaal" %>
         <ul>
           <li>
             <a href="https://www.facebook.com/BrouwerijFrontaal/" class="icon-facebook" target="_blank"></a>
@@ -103,7 +103,7 @@ description: Op de line-up staan onder andere Magnetic Spacemen, Jopen, Meadowla
         </ul>
       </div>
       <div class="line-up-item" data-cat="band">
-        <%= image_tag("line-up/rum-and-skunk.png") %>
+        <%= image_tag "line-up/rum-and-skunk.png", alt: "Rum and Skunk", title: "Rum and Skunk" %>
         <ul>
           <li>
             <a href="https://www.facebook.com/rumenskunk" class="icon-facebook" target="_blank"></a>
@@ -114,7 +114,7 @@ description: Op de line-up staan onder andere Magnetic Spacemen, Jopen, Meadowla
         </ul>
       </div>
       <div class="line-up-item" data-cat="band">
-        <%= image_tag("line-up/rammerick.png") %>
+        <%= image_tag "line-up/rammerick.png", alt: "Merrick plays Rammstein", title: "Merrick plays Rammstein" %>
         <ul>
           <li>
             <a href="https://www.facebook.com/merrickband/" class="icon-facebook" target="_blank"></a>
@@ -126,7 +126,7 @@ description: Op de line-up staan onder andere Magnetic Spacemen, Jopen, Meadowla
       </div>
 
       <div class="line-up-item" data-cat="beer">
-        <%= image_tag("line-up/oproer.png") %>
+        <%= image_tag "line-up/oproer.png", alt: "Oproer Brouwerij", title: "Oproer Brouwerij" %>
         <ul>
           <li>
             <a href="https://www.facebook.com/oproerbrouwerij/" class="icon-facebook" target="_blank"></a>
@@ -137,7 +137,7 @@ description: Op de line-up staan onder andere Magnetic Spacemen, Jopen, Meadowla
         </ul>
       </div>
       <div class="line-up-item" data-cat="band">
-        <%= image_tag("line-up/ginger-likes.png") %>
+        <%= image_tag "line-up/ginger-likes.png", alt: "Ginger Likes", title: "Ginger Likes" %>
         <ul>
           <li>
             <a href="https://www.facebook.com/gingerlikes.sleazerock/" class="icon-facebook" target="_blank"></a>
@@ -145,7 +145,7 @@ description: Op de line-up staan onder andere Magnetic Spacemen, Jopen, Meadowla
         </ul>
       </div>
       <div class="line-up-item" data-cat="beer">
-        <%= image_tag("line-up/de-kromme-haring.png") %>
+        <%= image_tag "line-up/de-kromme-haring.png", alt: "Brouwerij De Kromme Haring", title: "Brouwerij De Kromme Haring" %>
         <ul>
           <li>
             <a href="https://www.facebook.com/dekromme.haring/" class="icon-facebook" target="_blank"></a>
@@ -156,7 +156,7 @@ description: Op de line-up staan onder andere Magnetic Spacemen, Jopen, Meadowla
         </ul>
       </div>
       <div class="line-up-item" data-cat="beer">
-        <%= image_tag("line-up/rockin-ludina.png") %>
+        <%= image_tag "line-up/rockin-ludina.png", alt: "Brouwerij Rockin' Ludina", title: "Brouwerij Rockin Ludina'" %>
         <ul>
           <li>
             <a href="https://www.facebook.com/RockinLudinaBrewery/" class="icon-facebook" target="_blank"></a>
@@ -168,7 +168,7 @@ description: Op de line-up staan onder andere Magnetic Spacemen, Jopen, Meadowla
       </div>
 
       <div class="line-up-item" data-cat="band">
-        <%= image_tag("line-up/meadowlake.png") %>
+        <%= image_tag "line-up/meadowlake.png", alt: "Meadowlake", title: "Meadowlake" %>
         <ul>
           <li>
             <a href="https://www.facebook.com/meadowlakeband/" class="icon-facebook" target="_blank"></a>
@@ -179,7 +179,7 @@ description: Op de line-up staan onder andere Magnetic Spacemen, Jopen, Meadowla
         </ul>
       </div>
       <div class="line-up-item" data-cat="beer">
-        <%= image_tag("line-up/martinus.png") %>
+        <%= image_tag "line-up/martinus.png", alt: "Brouwerij Martinus", title: "Brouwerij Martinus" %>
         <ul>
           <li>
             <a href="https://www.facebook.com/Brouwerijmartinus/" class="icon-facebook" target="_blank"></a>
@@ -190,7 +190,7 @@ description: Op de line-up staan onder andere Magnetic Spacemen, Jopen, Meadowla
         </ul>
       </div>
       <div class="line-up-item" data-cat="beer">
-        <%= image_tag("line-up/bax.png") %>
+        <%= image_tag "line-up/bax.png", alt: "Baxbier", title: "Baxbier" %>
         <ul>
           <li>
             <a href="https://www.facebook.com/baxbier/" class="icon-facebook" target="_blank"></a>
@@ -201,7 +201,7 @@ description: Op de line-up staan onder andere Magnetic Spacemen, Jopen, Meadowla
         </ul>
       </div>
       <div class="line-up-item" data-cat="beer">
-        <%= image_tag("line-up/pivo.png") %>
+        <%= image_tag "line-up/pivo.png", alt: "Brouwerij Pivo", title: "Brouwerij Pivo" %>
         <ul>
           <li>
             <a href="https://www.facebook.com/pivobrouwers/" class="icon-facebook" target="_blank"></a>
@@ -211,9 +211,9 @@ description: Op de line-up staan onder andere Magnetic Spacemen, Jopen, Meadowla
           </li>
         </ul>
       </div>
-      
+
       <div class="line-up-item" data-cat="beer">
-        <%= image_tag("line-up/eggens.png") %>
+        <%= image_tag "line-up/eggens.png", alt: "Brouwerij Eggens", title: "Brouwerij Eggens" %>
         <ul>
           <li>
             <a href="https://www.facebook.com/Eggens-262041450932462/" class="icon-facebook" target="_blank"></a>
@@ -224,7 +224,7 @@ description: Op de line-up staan onder andere Magnetic Spacemen, Jopen, Meadowla
         </ul>
       </div>
       <div class="line-up-item" data-cat="beer">
-        <%= image_tag("line-up/brouwerij-groninger.png") %>
+        <%= image_tag "line-up/brouwerij-groninger.png", alt: "Brouwerij Groninger", title: "Brouwerij Groninger" %>
         <ul>
           <li>
             <a href="https://www.facebook.com/groningerbier" class="icon-facebook" target="_blank"></a>
@@ -240,4 +240,4 @@ description: Op de line-up staan onder andere Magnetic Spacemen, Jopen, Meadowla
 
 <%= partial "playlist", locals: { height: "360" } %>
 
-<%= partial "ticket" %>
+<%= partial "ticket"  %>
