--- a/source/_open-graph.html.erb
+++ b/source/_open-graph.html.erb
@@ -1,5 +1,9 @@
 <meta property="og:site_name" content="Hop! into the grain Festival 2018 | Craft Beer & Music Festival">
-<meta property="og:title" content="<%= page_title(current_page) %>">
+<% if current_page.url == "/" %>
+  <meta property="og:title" content="Welkom bij Hop! into the Grain Craft Beer & Music Festival">
+<% else %>
+  <meta property="og:title" content="<%= current_page.data.title %>" | Hop! into the Grain Craft Beer & Music Festival">
+<% end %>
 <meta property="og:url" content="<%= full_url(current_page.url) %>">
 <meta property="og:type" content="website">
 <meta property="og:description" content="<%= h(meta_description) %>">
