--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -1,6 +1,6 @@
 ---
 title: Contact
-description: Neem contact met ons op
+description: Neem contact op met Just in Beer over Hop! into the Grain Craft Beer & Music Festival.
 ---
 
 <section class="hero">
@@ -22,7 +22,8 @@ description: Neem contact met ons op
       </h2>
 
       <p>
-        Heb je een vraag of opmerking? Zie je iets dat niet goed is aan deze website of mis je iets? Neem contact met Just in Beer op via onderstaande formulier.
+        Heb je een vraag of opmerking? Zie je iets dat niet goed is aan deze website of mis je iets? <br />
+        Neem contact op met Just in Beer via onderstaand formulier.
       </p>
 
       <form class="form-contact" accept-charset="UTF-8" action="https://formspree.io/folkingebrew@gmail.com" method="POST">
