--- a/source/line-up.html.erb
+++ b/source/line-up.html.erb
@@ -114,6 +114,18 @@ description: Op dit Groningse bier- en muziekfestival geven onder andere Magneti
         </ul>
       </div>
       <div class="line-up-item" data-cat="band">
+        <%= image_tag "line-up/ciderwinkel.png", alt: "Ciderwinkel", title: "Ciderwinkel" %>
+        <ul>
+          <li>
+            <a href="https://www.facebook.com/Ciderwinkel" class="icon-facebook" target="_blank"></a>
+          </li>
+          <li>
+            <a href="https://www.ciderwinkel.nl/" class="icon-link" target="_blank"></a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="line-up-item" data-cat="band">
         <%= image_tag "line-up/rammerick.png", alt: "Merrick plays Rammstein", title: "Merrick plays Rammstein" %>
         <ul>
           <li>
@@ -124,7 +136,6 @@ description: Op dit Groningse bier- en muziekfestival geven onder andere Magneti
           </li>
         </ul>
       </div>
-
       <div class="line-up-item" data-cat="beer">
         <%= image_tag "line-up/oproer.png", alt: "Oproer Brouwerij", title: "Oproer Brouwerij" %>
         <ul>
@@ -155,6 +166,7 @@ description: Op dit Groningse bier- en muziekfestival geven onder andere Magneti
           </li>
         </ul>
       </div>
+
       <div class="line-up-item" data-cat="beer">
         <%= image_tag "line-up/rockin-ludina.png", alt: "Brouwerij Rockin' Ludina", title: "Brouwerij Rockin Ludina'" %>
         <ul>
@@ -166,7 +178,6 @@ description: Op dit Groningse bier- en muziekfestival geven onder andere Magneti
           </li>
         </ul>
       </div>
-
       <div class="line-up-item" data-cat="band">
         <%= image_tag "line-up/meadowlake.png", alt: "Meadowlake", title: "Meadowlake" %>
         <ul>
@@ -200,6 +211,7 @@ description: Op dit Groningse bier- en muziekfestival geven onder andere Magneti
           </li>
         </ul>
       </div>
+
       <div class="line-up-item" data-cat="beer">
         <%= image_tag "line-up/pivo.png", alt: "Brouwerij Pivo", title: "Brouwerij Pivo" %>
         <ul>
@@ -211,7 +223,6 @@ description: Op dit Groningse bier- en muziekfestival geven onder andere Magneti
           </li>
         </ul>
       </div>
-
       <div class="line-up-item" data-cat="beer">
         <%= image_tag "line-up/eggens.png", alt: "Brouwerij Eggens", title: "Brouwerij Eggens" %>
         <ul>
