--- a/source/line-up.html.erb
+++ b/source/line-up.html.erb
@@ -113,7 +113,7 @@ description: Op dit Groningse bier- en muziekfestival geven onder andere Magneti
           </li>
         </ul>
       </div>
-      <div class="line-up-item" data-cat="band">
+      <div class="line-up-item" data-cat="beer">
         <%= image_tag "line-up/ciderwinkel.png", alt: "Ciderwinkel", title: "Ciderwinkel" %>
         <ul>
           <li>
@@ -242,6 +242,17 @@ description: Op dit Groningse bier- en muziekfestival geven onder andere Magneti
           </li>
           <li>
             <a href="http://groningerbier.nl/" class="icon-link" target="_blank"></a>
+          </li>
+        </ul>
+      </div>
+      <div class="line-up-item" data-cat="beer">
+        <%= image_tag "line-up/noarder-dragten.png", alt: "Noarder Dragten", title: "Noarder Dragten" %>
+        <ul>
+          <li>
+            <a href="https://www.facebook.com/bierbrouwerijnoarderdragten/" class="icon-facebook" target="_blank"></a>
+          </li>
+          <li>
+            <a href="http://bierbrouwerijnoarderdragten.nl/" class="icon-link" target="_blank"></a>
           </li>
         </ul>
       </div>
