Add doorsale to info

--- a/source/info.html.erb
+++ b/source/info.html.erb
@@ -26,10 +26,13 @@ description: Waar is Hop! into the Grain Craft Beer & Music Festival? Waar kan i
         Naast dat er <a href="/line-up/">uitstekende regionale en nationale brouwerijen</a> (en een ciderman!) zullen staan hebben we ook <a href="/line-up/">een muziekprogramma</a> met diverse talentvolle acts van uiteenlopende genres. Natuurlijk kan dit alles niet zonder wat <em>good food</em>, dus hebben we ook wat foodtrucks uitgenodigd.
       </p>
       <p>
-        Het bier- en muziekfestival, georganiseerd door Just in Beer, vindt plaats bij EM2 "the Barn" (<a href="http://em2groningen.nl/route-parkeren/" target="_blank">routebeschrijving</a>) in Groningen. We starten 26 mei al vroeg in de middag om 12:00 uur en sluiten pas af om 01:30 uur in de nacht! Een hele dag plezier voor €14,95, inclusief 20 cl speciaal festivalglas. Een muntje kost €2,50 en er kan gepind worden.
+        Het bier- en muziekfestival, georganiseerd door Just in Beer, vindt plaats bij EM2 "the Barn" (<a href="http://em2groningen.nl/route-parkeren/" target="_blank">routebeschrijving</a>) in Groningen. We starten 26 mei al vroeg in de middag om 12:00 uur en sluiten pas af om 01:30 uur in de nacht! <strong>Een hele dag plezier voor €14,95 in de voorverkoop (aan de deur €16,95)</strong>, inclusief 20 cl speciaal festivalglas. Een muntje kost €2,50 en er kan gepind worden.
       </p>
       <p>
-        We zullen nog veel doen aan de verdere inrichting van vermaak en masterclasses/proeverijen aankondigen, waarvan apart tickets kunnen worden besteld. <a href="https://www.facebook.com/events/191110228287711/" target="_blank">Volg ons op Facebook</a> om op de hoogte te blijven en <a href="https://frontoffice.paylogic.nl/?event_id=122408&point_of_sale_id=17537" target="_blank" title="Koop hier je tickets">koop hier</a> direct je ticket(s).
+        We zullen nog veel doen aan de verdere inrichting van vermaak en masterclasses/proeverijen aankondigen, waarvan apart tickets kunnen worden besteld.
+      </p>
+      <p>
+        <a href="https://www.facebook.com/events/191110228287711/" target="_blank">Volg ons op Facebook</a> om op de hoogte te blijven en <a href="https://frontoffice.paylogic.nl/?event_id=122408&point_of_sale_id=17537" target="_blank" title="Koop hier je tickets">koop hier</a> direct je ticket(s).
       </p>
       <p>
         Lees <a href="/huisregels/">hier</a> de huisregels die van toepassing zijn op het festival.
