Add fusiek tickets

--- a/source/_ticket.html.erb
+++ b/source/_ticket.html.erb
@@ -1,5 +1,12 @@
 <section class="ticket">
   <div class="row">
-    <a class="button big orange" href="	https://frontoffice.paylogic.nl/?event_id=122408&point_of_sale_id=17537" target="_blank">Tickets &raquo;</a>
+    <h2>Tickets</h2>
+    <p>
+      Een hele dag plezier voor €14,95 in de voorverkoop (aan de deur €16,95)</strong>, inclusief 20 cl speciaal festivalglas.
+    </p>
+    <a class="button big orange" href="	https://frontoffice.paylogic.nl/?event_id=122408&point_of_sale_id=17537" target="_blank">Koop direct online &raquo;</a>
+    <p>
+      Of koop je tickets bij Just in Beer.
+    </p>
   </div>
 </section>
