--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -13,6 +13,9 @@ description: "Het nieuwste bierfestival van Groningen: Hop! into the Grain Craft
     <a class="button big orange" href="https://frontoffice.paylogic.nl/?event_id=122408&point_of_sale_id=17537" target="_blank">
       Tickets &raquo;
     </a>
+    <p>
+      Of koop je tickets bij Just in Beer.
+    </p>
   </div>
 </section>
 
@@ -40,7 +43,7 @@ description: "Het nieuwste bierfestival van Groningen: Hop! into the Grain Craft
     </h2>
 
     <p>
-      Proef een breed scala aan geweldig Nederlands craft beer en geniet van het luisteren naar livemuziek.
+      Proef een breed scala aan geweldig Nederlands craft beer en geniet van het luisteren naar live muziek.
     </p>
 
     <div class="line-up-wrapper">
