--- a/source/stylesheets/components/_ticket.scss
+++ b/source/stylesheets/components/_ticket.scss
@@ -1,4 +1,9 @@
 section.ticket {
   background: lighten($light-gray, 10);
   text-align: center;
+
+  p,
+  a.button { 
+    margin-bottom: 1.5em;
+  }
 }
