--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -26,7 +26,7 @@ description: Neem contact op met Just in Beer over Hop! into the Grain Craft Bee
         Neem contact op met Just in Beer via onderstaand formulier.
       </p>
 
-      <form class="form-contact" accept-charset="UTF-8" action="https://formspree.io/folkingebrew@gmail.com" method="POST">
+      <form class="form-contact" accept-charset="UTF-8" action="https://formspree.io/just_in_beer@hotmail.com" method="POST">
         <input type="hidden" name="utf8" value="✓">
         <input type="hidden" name="form" value="Contact">
         <div class="form-name">
