--- a/source/line-up.html.erb
+++ b/source/line-up.html.erb
@@ -35,6 +35,14 @@ description: Op dit Groningse bier- en muziekfestival geven onder andere Magneti
   <div class="row">
     <div class="line-up-wrapper" id="line-up-content">
 
+      <div class="line-up-item" data-cat="beer">
+        <%= image_tag "line-up/folkingebrew-groningen.png", alt: "Folkingebrew Groningen", title: "Folkingebrew Groningen" %>
+        <ul>
+          <li>
+            <a href="https://www.facebook.com/Folkingebrew-167577637289407/" class="icon-facebook" target="_blank"></a>
+          </li>
+        </ul>
+      </div>
       <div class="line-up-item" data-cat="band">
         <%= image_tag "line-up/magnetic-spacemen.png", alt: "Magnetic Spacemen", title: "Magnetic Spacemen" %>
         <ul>
@@ -68,17 +76,6 @@ description: Op dit Groningse bier- en muziekfestival geven onder andere Magneti
           </li>
         </ul>
       </div>
-      <div class="line-up-item" data-cat="beer">
-        <%= image_tag "line-up/jopen.png", alt: "Brouwerij Jopen", title: "Brouwerij Jopen" %>
-        <ul>
-          <li>
-            <a href="https://www.facebook.com/JopenBier/" class="icon-facebook" target="_blank"></a>
-          </li>
-          <li>
-            <a href="https://www.jopenbier.nl/" class="icon-link" target="_blank"></a>
-          </li>
-        </ul>
-      </div>
 
       <div class="line-up-item" data-cat="band">
         <%= image_tag "line-up/model-depose.png", alt: "Model Depose", title: "Model Depose" %>
@@ -92,13 +89,13 @@ description: Op dit Groningse bier- en muziekfestival geven onder andere Magneti
         </ul>
       </div>
       <div class="line-up-item" data-cat="beer">
-        <%= image_tag "line-up/frontaal.png", alt: "Brouwerij Frontaal", title: "Brouwerij Frontaal" %>
+        <%= image_tag "line-up/jopen.png", alt: "Brouwerij Jopen", title: "Brouwerij Jopen" %>
         <ul>
           <li>
-            <a href="https://www.facebook.com/BrouwerijFrontaal/" class="icon-facebook" target="_blank"></a>
+            <a href="https://www.facebook.com/JopenBier/" class="icon-facebook" target="_blank"></a>
           </li>
           <li>
-            <a href="http://www.brouwerijfrontaal.nl/" class="icon-link" target="_blank"></a>
+            <a href="https://www.jopenbier.nl/" class="icon-link" target="_blank"></a>
           </li>
         </ul>
       </div>
@@ -113,6 +110,18 @@ description: Op dit Groningse bier- en muziekfestival geven onder andere Magneti
           </li>
         </ul>
       </div>
+      <div class="line-up-item" data-cat="beer">
+        <%= image_tag "line-up/frontaal.png", alt: "Brouwerij Frontaal", title: "Brouwerij Frontaal" %>
+        <ul>
+          <li>
+            <a href="https://www.facebook.com/BrouwerijFrontaal/" class="icon-facebook" target="_blank"></a>
+          </li>
+          <li>
+            <a href="http://www.brouwerijfrontaal.nl/" class="icon-link" target="_blank"></a>
+          </li>
+        </ul>
+      </div>
+
       <div class="line-up-item" data-cat="beer">
         <%= image_tag "line-up/ciderwinkel.png", alt: "Ciderwinkel", title: "Ciderwinkel" %>
         <ul>
