Update text fail

--- a/source/info.html.erb
+++ b/source/info.html.erb
@@ -36,7 +36,7 @@ description: Waar is Hop! into the Grain Craft Beer & Music Festival? Waar kan i
         We zullen nog veel doen aan de verdere inrichting van vermaak en masterclasses/proeverijen aankondigen, waarvan apart tickets kunnen worden besteld.
       </p>
       <p>
-        <a href="https://www.facebook.com/events/191110228287711/" target="_blank">Volg ons op Facebook</a> om op de hoogte te blijven en
+        <a href="https://www.facebook.com/events/191110228287711/" target="_blank">Volg ons op Facebook</a> om op de hoogte te blijven!
       <p>
         Lees <a href="/huisregels/">hier</a> de huisregels die van toepassing zijn op het festival.
       </p>
