Add JOPEN masterclass

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -11,11 +11,24 @@ description: "Het nieuwste bierfestival van Groningen: Hop! into the Grain Craft
       <span>EM2 "the barn", Groningen</span>
     </h2>
     <a class="button big orange" href="https://frontoffice.paylogic.nl/?event_id=122408&point_of_sale_id=17537" target="_blank">
-      Tickets &raquo;
+      Koop een kaartje &raquo;
     </a>
     <p>
-      Of koop je tickets bij Just in Beer.
+      Of koop je oldschool papieren ticket bij Just in Beer!
     </p>
+  </div>
+</section>
+
+<section class="masterclass">
+  <div class="row">
+    <h2>Jopen Masterclass!</h2>
+    <%= image_tag "line-up/jopen.png", alt: "Brouwerij Jopen", title: "Brouwerij Jopen" %>
+    <p>
+      Er zijn vanaf nu losse kaarten verkrijgbaar voor de Jopen Masterclass, inclusief 5 proefglaasjes craft beer! De masterclass start om 16:00 uur (inloop vanaf 15:45 uur). Locatie van de Masterclass is in de partytent op het buitenterrein. Een kaartje kost maar €9,95 (beperkt beschikbaar). Om deel te kunnen nemen aan de Masterclass is een festivalticket niet nodig.
+    </p>
+    <a class="button big orange" href="https://frontoffice.paylogic.nl/?event_id=122408&point_of_sale_id=17537" target="_blank">
+      Koop een kaartje &raquo;
+    </a>
   </div>
 </section>
 
