--- a/source/stylesheets/_home.scss
+++ b/source/stylesheets/_home.scss
@@ -52,6 +52,18 @@ body.index {
     }
   }
 
+  .masterclass {
+    text-align: center;
+
+    h2 {
+      margin: 0;
+    }
+
+    p {
+      margin: 0 0 1.5em;
+    }
+  }
+
   .counter {
     background: $orange;
     color: $white;
