--- a/source/_header.html.erb
+++ b/source/_header.html.erb
@@ -17,6 +17,9 @@
           <%= nav_link "Line-up", "/line-up/", class: "nav-item", title: "Line-up" %>
         </li>
         <li>
+          <%= nav_link "Timetable", "/timetable/", class: "nav-item", title: "Timetable" %>
+        </li>
+        <li>
           <%= nav_link "Info", "/info/", class: "nav-item", title: "Informatie" %>
         </li>
         <li>
