The DJ has a name

--- a/source/timetable.html.erb
+++ b/source/timetable.html.erb
@@ -93,7 +93,7 @@ description: Check de timetable van Hop! into the Grain Festival
           <span>1:30</span>
         </div>
         <div class="band">
-          DJ
+          DJ Ray Koocks
         </div>
       </div>
     </div>
